<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >
        
    <include layout="@layout/top_reset"/>
    <include layout="@layout/top_forget_title"/>
    
    <View 
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@drawable/login_divider"
        />
    <LinearLayout 
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        >
        <ImageView 
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/login_phone"
            android:padding="10dp"
            />
        <EditText 
            android:id="@+id/reset_phone_input"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:maxLength="11"
            android:background="@null"
            android:paddingLeft="5dp"
            android:digits="1234567890."
            android:singleLine="true"
            android:gravity="center_vertical"
            android:hint="@string/register_phone_input"
            android:textColor="@color/fans_gray"
            />
        
    </LinearLayout>
     <View 
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@drawable/login_divider"
        />
      <RelativeLayout 
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="horizontal"
        >
        <ImageView 
            android:id="@+id/reset_pwd_img"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:layout_centerVertical="true"
            android:src="@drawable/login_pwd"
            />

        <EditText
            android:id="@+id/reg_code_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/forgot_pwd"
            android:layout_toRightOf="@+id/reset_pwd_img"
            android:background="@null"
            android:gravity="center_vertical"
            android:layout_centerVertical="true"
            android:hint="@string/register_code_input"
            android:paddingLeft="5dp" >

        </EditText>

        <TextView
            android:id="@+id/forgot_pwd"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="10dp"
            android:background="@drawable/login_forgotpwd"
            android:gravity="center"
            android:textColor="@color/register_code_color"
            android:text="@string/register_obtain_code" />
        
    </RelativeLayout>
    <View 
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@drawable/login_divider"
        />
    
    <Button 
        android:id="@+id/reg_next"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="5dp"
        android:text="@string/register_next"
        android:textColor="#ffffffff"
        android:gravity="center"
        android:background="@drawable/partner_commit_ic"
        />

</LinearLayout>
