<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >
        
    <include layout="@layout/top_register"/>
    
    <View 
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@drawable/login_divider"
        />
    <LinearLayout 
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        >
        <ImageView 
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/login_phone"
            android:padding="10dp"
            />
        <EditText 
            android:id="@+id/reg_common_nickname"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:maxLength="11"
            android:background="@null"
            android:paddingLeft="5dp"
            android:digits="1234567890."
            android:singleLine="true"
            android:gravity="center_vertical"
            android:hint="@string/register_nickname"
            android:textColor="@color/fans_gray"
            />
        
    </LinearLayout>
     <View 
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@drawable/login_divider"
        />
      <RelativeLayout 
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="horizontal"
        >
        <ImageView 
            android:id="@+id/pwd_img"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:layout_centerVertical="true"
            android:src="@drawable/login_pwd"
            />

        <EditText
            android:id="@+id/reg_common_pwd"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@+id/pwd_img"
            android:background="@null"
            android:gravity="center_vertical"
            android:layout_centerVertical="true"
            android:hint="@string/register_set_pwd"
            android:paddingLeft="5dp" >

        </EditText>

        
        
    </RelativeLayout>
    <View 
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@drawable/login_divider"
        />
    
    <RelativeLayout 
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="horizontal"
        >
        <ImageView 
            android:id="@+id/pwd_img_again"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:layout_centerVertical="true"
            android:src="@drawable/login_pwd"
            />

        <EditText
            android:id="@+id/reg_common_pwd_again"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@+id/pwd_img_again"
            android:background="@null"
            android:gravity="center_vertical"
            android:layout_centerVertical="true"
            android:hint="@string/register_set_pwd_again"
            android:paddingLeft="5dp" >

        </EditText>
    </RelativeLayout>
    
    <View 
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@drawable/login_divider"
        />
    <include layout="@layout/register_city_selected"/>
    
    <View 
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@drawable/login_divider"
        />
    
    <Button 
        android:id="@+id/reg_next"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="5dp"
        android:text="@string/register_finish"
        android:textColor="#ffffffff"
        android:gravity="center"
        android:background="@drawable/partner_commit_ic"
        />
    

</LinearLayout>
